@@ -2,6 +2,7 @@ Changes in Release 2.2.0
 =============================================
 [SIDP-362] - Only log exception message without stack trace for expired SAML messages
 [SIDP-360] - Session isn't being set within the attribute request context during a SAML1 attribute query
+[SIDP-359] - HttpServletHelper.getRelyingPartyConfirmationManager misnamed
 
 Changes in Release 2.1.5
 =============================================
